--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/danliris/bateeq-core-api#readme",
   "dependencies": {
-    "bateeq-module": "git+https://github.com/danliris/bateeq-module.git",
+    "bateeq-module": "git+https://github.com/danliris/bateeq-module.git#dev",
     "mongo-factory": "^1.0.0",
     "mongodb": "^2.2.1",
+    "ms-rest": "^1.15.2",
+    "powerbi-api": "^1.0.1",
     "restify": "^4.1.1",
     "restify-router": "^0.2.1"
   }
