--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ms-rest": "^1.15.2",
     "powerbi-api": "^1.0.1",
     "restify": "^4.1.1",
-    "restify-router": "^0.2.1"
+    "restify-router": "^0.2.1",
+    "mssql": "^3.3.0"
   }
 }
