add package xls

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bateeq-module": "git+https://github.com/danliris/bateeq-module.git#dev",
     "fast-csv": "^2.3.0",
+    "json2xls": "^0.1.2",
     "mongo-factory": "^1.0.0",
     "mongodb": "^2.2.1",
     "passport": "^0.3.2",
