--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "fast-csv": "^2.3.0",
     "json2xls": "^0.1.2",
     "moment": "^2.17.1",
-
+    "pkgcloud" : "^1.4.0",
 
     "mongo-factory": "^1.0.0",
     "mongodb": "^2.2.1",
