--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/danliris/bateeq-core-api#readme",
   "dependencies": {
 
-    "bateeq-module": "git+https://github.com/danliris/bateeq-module.git#uat",
+    "bateeq-module": "git+https://github.com/danliris/bateeq-module.git#dev",
 
     "fast-csv": "^2.3.0",
     "json2xls": "^0.1.2",
