--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 
 
 
-    "bateeq-module": "git+https://github.com/danliris/bateeq-module.git",
+    "bateeq-module": "git+https://github.com/danliris/bateeq-module.git#dev",
 
 
 
