--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 
 
 
-    "bateeq-module": "git+https://github.com/danliris/bateeq-module.git",
+    "bateeq-module": "git+https://github.com/danliris/bateeq-module.git#uat",
 
 
 
