--- a/package.json
+++ b/package.json
@@ -17,33 +17,22 @@
   },
   "homepage": "https://github.com/danliris/bateeq-core-api#readme",
   "dependencies": {
-
-
-
-
+    "azure-storage": "^2.10.0",
     "bateeq-module": "git+https://github.com/danliris/bateeq-module.git#dev",
-
-
-
-
-
     "fast-csv": "^2.3.0",
-    "json2xls": "^0.1.2",
-    "moment": "^2.17.1",
-    
-    "pkgcloud" : "^1.4.0",
-
     "js-toolkit": "git+https://github.com/pinkgorilla/js-toolkit.git",
+    "json2xls": "^0.1.2",
     "module-toolkit": "git+https://github.com/pinkgorilla/module-toolkit.git",
-    "mongodb-toolkit": "git+https://github.com/pinkgorilla/mongodb-toolkit.git",
-    
+    "moment": "^2.17.1",
     "mongo-factory": "^1.0.0",
     "mongodb": "^2.2.1",
+    "mongodb-toolkit": "git+https://github.com/pinkgorilla/mongodb-toolkit.git",
+    "ms-rest": "^1.15.2",
+    "mssql": "^3.3.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.1.0",
     "passport-local": "^1.0.0",
-    "ms-rest": "^1.15.2",
-    "mssql": "^3.3.0",
+    "pkgcloud": "^1.4.0",
     "powerbi-api": "^1.0.1",
     "restify": "^4.1.1",
     "restify-router": "^0.2.1"
